--- a/practicas/p06/formulario.html
+++ b/practicas/p06/formulario.html
@@ -27,67 +27,97 @@
     >
       <h2>Información del Participante</h2>
 
-      <ul>
-        <li>Nombre: <input type="text" name="name" /></li>
-        <li>Dirección de E-mail:<input type="email" name="email" /></li>
-        <li>Número Telefónico: <input type="tel" name="phone" /></li>
-        <li>
-          Mis tenis son tan feos porque...<br /><textarea
-            name="story"
-            rows="4"
-            cols="60"
-            maxlength=""
-            placeholder="No mas de 300 caracteres de longitud"
-          ></textarea>
-        </li>
-      </ul>
+      <fieldset>
+        <legend>Información Personal</legend>
+        <ul>
+          <li>Nombre: <input type="text" name="name" /></li>
+          <li>Dirección de E-mail: <input type="email" name="email" /></li>
+          <li>Número Telefónico: <input type="tel" name="phone" /></li>
+          <li>
+            Mis tenis son tan feos porque...<br />
+            <textarea
+              name="story"
+              rows="4"
+              cols="60"
+              maxlength="300"
+              placeholder="No mas de 300 caracteres de longitud"
+            ></textarea>
+          </li>
+        </ul>
+      </fieldset>
 
       <h2>Diseña tus Mike personalizados:</h2>
 
-      <p>Diseño personalizado del Tenis</p>
+      <fieldset>
+        <legend>Diseño personalizado del Tenis</legend>
 
-      <p>Color <em>(escoge uno)</em>:</p>
-      <ul>
-        <li><input type="radio" name="color" value="red" /> Rojo</li>
-        <li><input type="radio" name="color" value="blue" />Azul</li>
-        <li><input type="radio" name="color" value="black" />Negro</li>
-        <li><input type="radio" name="color" value="silver" />Plateado</li>
-      </ul>
+        <fieldset>
+          <legend>Color (escoge uno):</legend>
+          <ul>
+            <li>
+              <input type="radio" name="color" value="Rojo" checked />Rojo
+            </li>
+            <li><input type="radio" name="color" value="Azul" />Azul</li>
+            <li><input type="radio" name="color" value="Negro" />Negro</li>
+            <li>
+              <input type="radio" name="color" value="Plateado" />Plateado
+            </li>
+          </ul>
+        </fieldset>
 
-      <p>Características <em>(escoge tantas como quieras)</em>:</p>
-      <ul>
-        <li>
-          <input
-            type="checkbox"
-            name="features[]"
-            value="Cordones
-          brillantes"
-          />Cordones brillantes
-        </li>
-        <li>
-          <input
-            type="checkbox"
-            name="features[]"
-            value="Logo metalico"
-            checked
-          />Logo metálico
-        </li>
+        <fieldset>
+          <legend>Características (escoge tantas como quieras):</legend>
+          <ul>
+            <li>
+              <input
+                type="checkbox"
+                name="features[]"
+                value="Cordones brillantes"
+              />Cordones brillantes
+            </li>
+            <li>
+              <input
+                type="checkbox"
+                name="features[]"
+                value="Logo metálico"
+                checked
+              />Logo metálico
+            </li>
+            <li>
+              <input
+                type="checkbox"
+                name="features[]"
+                value="Suela luminosa"
+              />Suela luminosa
+            </li>
+            <li>
+              <input
+                type="checkbox"
+                name="features[]"
+                value="WiFi integrado"
+              />WiFi integrado
+            </li>
+          </ul>
+        </fieldset>
 
-        <li>
-          <input
-            type="checkbox"
-            name="features[]"
-            value="Suela luminosa"
-          />Suela luminosa
-        </li>
-        <li>
-          <input type="checkbox" name="features[]" value="WiFi integrado" />WiFi
-          integrado
-        </li>
-      </ul>
-
-      <p>Talla</p>
-      <p>Las medidas reflejan el estándar masculino:</p>
+        <fieldset>
+          <legend>Talla</legend>
+          <p>
+            Las medidas reflejan el estándar masculino:
+            <select name="size" size="1">
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9">9</option>
+              <option value="10">10</option>
+              <option value="11">11</option>
+            </select>
+          </p>
+        </fieldset>
+      </fieldset>
 
       <p>
         <input type="submit" value="¡Chidos mis Tenis!" />
