Ejemplo de JS01_Introduccion_a_JavaScript.pdf agregado

--- a/actividades/a06/index.html
+++ b/actividades/a06/index.html
@@ -7,10 +7,15 @@
     <script src="./src/main.js"></script>
   </head>
   <body>
-    <h1>Hola Mundo de JavaScript</h1>
+    <!-- <h1>Hola Mundo de JavaScript</h1>
     <div id="nombre"></div>
     <div id="edad"></div>
+    <input id="clickMe" type="button" value="clickme" onclick="getDatos();" /> -->
 
-    <input id="clickMe" type="button" value="clickme" onclick="getDatos();" />
+    <div id="resultadoEjemplo1">
+      <h1>JS01_Introduccion_a_JavaScript.pdf: Ejemplo pag 8</h1>
+      <div id="mensaje"></div>
+      <input id="clickMe" type="button" value="clickme" onclick="ejemplo1();" />
+    </div>
   </body>
 </html>
