--- a/actividades/a06/index.html
+++ b/actividades/a06/index.html
@@ -15,7 +15,22 @@
     <div id="resultadoEjemplo1">
       <h1>JS01_Introduccion_a_JavaScript.pdf: Ejemplo pag 8</h1>
       <div id="mensaje"></div>
-      <input id="clickMe" type="button" value="clickme" onclick="ejemplo1();" />
+      <input type="button" value="clickme" onclick="ejemplo1();" />
+    </div>
+
+    <div id="resultadoEjemplo2">
+      <h2>JS02_Variables_Entradas_Operadores.pdf: Ejemplo pág 6</h2>
+      <div id="nombre"></div>
+      <div id="edad"></div>
+      <div id="altura"></div>
+      <div id="casado"></div>
+      <input type="button" value="clickme" onclick="ejemplo2();" />
+    </div>
+
+    <div id="resultadoEjemplo3">
+      <h2>JS02_Variables_Entradas_Operadores.pdf: Ejemplo pág 12</h2>
+      <div id="mensaje1"></div>
+      <input type="button" value="clickme" onclick="ejemplo3();" />
     </div>
   </body>
 </html>
