Ejemplos de JS03_Estructuras_de_condicion.pdf agregados

--- a/actividades/a06/index.html
+++ b/actividades/a06/index.html
@@ -32,5 +32,42 @@
       <div id="mensaje1"></div>
       <input type="button" value="clickme" onclick="ejemplo3();" />
     </div>
+
+    <div id="resultadoEjemplo4">
+      <h2>JS03_Estructuras_de_condicion.pdf: Ejemplo pág 3</h2>
+      <div id="suma"></div>
+      <div id="producto"></div>
+      <input type="button" value="clickme" onclick="ejemplo4();" />
+    </div>
+
+    <div id="resultadoEjemplo5">
+      <h2>JS03_Estructuras_de_condicion.pdf: Ejemplo pág 8</h2>
+      <div id="mensaje2"></div>
+      <input type="button" value="clickme" onclick="ejemplo5();" />
+    </div>
+
+    <div id="resultadoEjemplo6">
+      <h2>JS03_Estructuras_de_condicion.pdf: Ejemplo pág 11</h2>
+      <div id="comparacion"></div>
+      <input type="button" value="clickme" onclick="ejemplo6();" />
+    </div>
+
+    <div id="resultadoEjemplo7">
+      <h2>JS03_Estructuras_de_condicion.pdf: Ejemplo pág 15-16</h2>
+      <div id="promedio"></div>
+      <input type="button" value="clickme" onclick="ejemplo7();" />
+    </div>
+
+    <div id="resultadoEjemplo8">
+      <h2>JS03_Estructuras_de_condicion.pdf: Ejemplo pág 18</h2>
+      <div id="casos"></div>
+      <input type="button" value="clickme" onclick="ejemplo8();" />
+    </div>
+
+    <div id="resultadoEjemplo9">
+      <h2>JS03_Estructuras_de_condicion.pdf: Ejemplo pág 21</h2>
+      <div id="mensaje3"></div>
+      <input type="button" value="clickme" onclick="ejemplo9();" />
+    </div>
   </body>
 </html>
