Ejemplos de JS04_Estructuras_de_repeticion.pdf agregados

--- a/actividades/a06/index.html
+++ b/actividades/a06/index.html
@@ -69,5 +69,29 @@
       <div id="mensaje3"></div>
       <input type="button" value="clickme" onclick="ejemplo9();" />
     </div>
+
+    <div id="resultadoEjemplo10">
+      <h2>JS04_Estructuras_de_repeticion.pdf: Ejemplo pág 5</h2>
+      <div id="resultado"></div>
+      <input type="button" value="clickme" onclick="ejemplo10();" />
+    </div>
+
+    <div id="resultadoEjemplo11">
+      <h2>JS04_Estructuras_de_repeticion.pdf: Ejemplo pág 6</h2>
+      <div id="sumaRepeticion"></div>
+      <input type="button" value="clickme" onclick="ejemplo11();" />
+    </div>
+
+    <div id="resultadoEjemplo12">
+      <h2>JS04_Estructuras_de_repeticion.pdf: Ejemplo pág 12</h2>
+      <div id="resultadoDoWhile"></div>
+      <input type="button" value="clickme" onclick="ejemplo12();" />
+    </div>
+
+    <div id="resultadoEjemplo13">
+      <h2>JS04_Estructuras_de_repeticion.pdf: Ejemplo pág 16</h2>
+      <div id="resultadoFor"></div>
+      <input type="button" value="clickme" onclick="ejemplo13();" />
+    </div>
   </body>
 </html>
