Ejemplos de JS05_Funciones.pdf agregados

--- a/actividades/a06/index.html
+++ b/actividades/a06/index.html
@@ -93,5 +93,35 @@
       <div id="resultadoFor"></div>
       <input type="button" value="clickme" onclick="ejemplo13();" />
     </div>
+
+    <div id="resultadoEjemplo14">
+      <h2>JS05_Funciones: Ejemplo pág 6</h2>
+      <div id="mensaje4"></div>
+      <input type="button" value="clickme" onclick="ejemplo14();" />
+    </div>
+
+    <div id="resultadoEjemplo15">
+      <h2>JS05_Funciones: Ejemplo pág 7</h2>
+      <div id="mensaje5"></div>
+      <input type="button" value="clickme" onclick="ejemplo15();" />
+    </div>
+
+    <div id="resultadoEjemplo16">
+      <h2>JS05_Funciones: Ejemplo pág 10</h2>
+      <div id="mensaje6"></div>
+      <input type="button" value="clickme" onclick="ejemplo16();" />
+    </div>
+
+    <div id="resultadoEjemplo17">
+      <h2>JS05_Funciones: Ejemplo pág 13</h2>
+      <div id="mensaje7"></div>
+      <input type="button" value="clickme" onclick="ejemplo17();" />
+    </div>
+
+    <div id="resultadoEjemplo18">
+      <h2>JS05_Funciones: Ejemplo pág 15</h2>
+      <div id="mensaje8"></div>
+      <input type="button" value="clickme" onclick="ejemplo18();" />
+    </div>
   </body>
 </html>
