Corecciones semanticas en index.html agregadas

--- a/actividades/a06/index.html
+++ b/actividades/a06/index.html
@@ -12,14 +12,16 @@
     <div id="edad"></div>
     <input id="clickMe" type="button" value="clickme" onclick="getDatos();" /> -->
 
+    <h1>Ejemplos JavaScript</h1>
+
     <div id="resultadoEjemplo1">
-      <h1>JS01_Introduccion_a_JavaScript.pdf: Ejemplo pag 8</h1>
+      <h2>Ejemplo 1 - JS01_Introduccion_a_JavaScript.pdf: Ejemplo pag 8</h2>
       <div id="mensaje"></div>
       <input type="button" value="clickme" onclick="ejemplo1();" />
     </div>
 
     <div id="resultadoEjemplo2">
-      <h2>JS02_Variables_Entradas_Operadores.pdf: Ejemplo pág 6</h2>
+      <h2>Ejemplo 2 - JS02_Variables_Entradas_Operadores.pdf: Ejemplo pág 6</h2>
       <div id="nombre"></div>
       <div id="edad"></div>
       <div id="altura"></div>
@@ -28,98 +30,100 @@
     </div>
 
     <div id="resultadoEjemplo3">
-      <h2>JS02_Variables_Entradas_Operadores.pdf: Ejemplo pág 12</h2>
+      <h2>
+        Ejemplo 3 - JS02_Variables_Entradas_Operadores.pdf: Ejemplo pág 12
+      </h2>
       <div id="mensaje1"></div>
       <input type="button" value="clickme" onclick="ejemplo3();" />
     </div>
 
     <div id="resultadoEjemplo4">
-      <h2>JS03_Estructuras_de_condicion.pdf: Ejemplo pág 3</h2>
+      <h2>Ejemplo 4 - JS03_Estructuras_de_condicion.pdf: Ejemplo pág 3</h2>
       <div id="suma"></div>
       <div id="producto"></div>
       <input type="button" value="clickme" onclick="ejemplo4();" />
     </div>
 
     <div id="resultadoEjemplo5">
-      <h2>JS03_Estructuras_de_condicion.pdf: Ejemplo pág 8</h2>
+      <h2>Ejemplo 5 - JS03_Estructuras_de_condicion.pdf: Ejemplo pág 8</h2>
       <div id="mensaje2"></div>
       <input type="button" value="clickme" onclick="ejemplo5();" />
     </div>
 
     <div id="resultadoEjemplo6">
-      <h2>JS03_Estructuras_de_condicion.pdf: Ejemplo pág 11</h2>
+      <h2>Ejemplo 6 - JS03_Estructuras_de_condicion.pdf: Ejemplo pág 11</h2>
       <div id="comparacion"></div>
       <input type="button" value="clickme" onclick="ejemplo6();" />
     </div>
 
     <div id="resultadoEjemplo7">
-      <h2>JS03_Estructuras_de_condicion.pdf: Ejemplo pág 15-16</h2>
+      <h2>Ejemplo 7 - JS03_Estructuras_de_condicion.pdf: Ejemplo pág 15-16</h2>
       <div id="promedio"></div>
       <input type="button" value="clickme" onclick="ejemplo7();" />
     </div>
 
     <div id="resultadoEjemplo8">
-      <h2>JS03_Estructuras_de_condicion.pdf: Ejemplo pág 18</h2>
+      <h2>Ejemplo 8 - JS03_Estructuras_de_condicion.pdf: Ejemplo pág 18</h2>
       <div id="casos"></div>
       <input type="button" value="clickme" onclick="ejemplo8();" />
     </div>
 
     <div id="resultadoEjemplo9">
-      <h2>JS03_Estructuras_de_condicion.pdf: Ejemplo pág 21</h2>
+      <h2>Ejemplo 9 - JS03_Estructuras_de_condicion.pdf: Ejemplo pág 21</h2>
       <div id="mensaje3"></div>
       <input type="button" value="clickme" onclick="ejemplo9();" />
     </div>
 
     <div id="resultadoEjemplo10">
-      <h2>JS04_Estructuras_de_repeticion.pdf: Ejemplo pág 5</h2>
+      <h2>Ejemplo 10 - JS04_Estructuras_de_repeticion.pdf: Ejemplo pág 5</h2>
       <div id="resultado"></div>
       <input type="button" value="clickme" onclick="ejemplo10();" />
     </div>
 
     <div id="resultadoEjemplo11">
-      <h2>JS04_Estructuras_de_repeticion.pdf: Ejemplo pág 6</h2>
+      <h2>Ejemplo 11 - JS04_Estructuras_de_repeticion.pdf: Ejemplo pág 6</h2>
       <div id="sumaRepeticion"></div>
       <input type="button" value="clickme" onclick="ejemplo11();" />
     </div>
 
     <div id="resultadoEjemplo12">
-      <h2>JS04_Estructuras_de_repeticion.pdf: Ejemplo pág 12</h2>
+      <h2>Ejemplo 12 - JS04_Estructuras_de_repeticion.pdf: Ejemplo pág 12</h2>
       <div id="resultadoDoWhile"></div>
       <input type="button" value="clickme" onclick="ejemplo12();" />
     </div>
 
     <div id="resultadoEjemplo13">
-      <h2>JS04_Estructuras_de_repeticion.pdf: Ejemplo pág 16</h2>
+      <h2>Ejemplo 13 - JS04_Estructuras_de_repeticion.pdf: Ejemplo pág 16</h2>
       <div id="resultadoFor"></div>
       <input type="button" value="clickme" onclick="ejemplo13();" />
     </div>
 
     <div id="resultadoEjemplo14">
-      <h2>JS05_Funciones: Ejemplo pág 6</h2>
+      <h2>Ejemplo 14 - JS05_Funciones: Ejemplo pág 6</h2>
       <div id="mensaje4"></div>
       <input type="button" value="clickme" onclick="ejemplo14();" />
     </div>
 
     <div id="resultadoEjemplo15">
-      <h2>JS05_Funciones: Ejemplo pág 7</h2>
+      <h2>Ejemplo 15 - JS05_Funciones: Ejemplo pág 7</h2>
       <div id="mensaje5"></div>
       <input type="button" value="clickme" onclick="ejemplo15();" />
     </div>
 
     <div id="resultadoEjemplo16">
-      <h2>JS05_Funciones: Ejemplo pág 10</h2>
+      <h2>Ejemplo 16 - JS05_Funciones: Ejemplo pág 10</h2>
       <div id="mensaje6"></div>
       <input type="button" value="clickme" onclick="ejemplo16();" />
     </div>
 
     <div id="resultadoEjemplo17">
-      <h2>JS05_Funciones: Ejemplo pág 13</h2>
+      <h2>Ejemplo 17 - JS05_Funciones: Ejemplo pág 13</h2>
       <div id="mensaje7"></div>
       <input type="button" value="clickme" onclick="ejemplo17();" />
     </div>
 
     <div id="resultadoEjemplo18">
-      <h2>JS05_Funciones: Ejemplo pág 15</h2>
+      <h2>Ejemplo 18 - JS05_Funciones: Ejemplo pág 15</h2>
       <div id="mensaje8"></div>
       <input type="button" value="clickme" onclick="ejemplo18();" />
     </div>
