--- a/actividades/a07/p12_con_jquery/product_app/index.html
+++ b/actividades/a07/p12_con_jquery/product_app/index.html
@@ -64,6 +64,7 @@
                                         type="number"
                                         id="price"
                                         placeholder="Precio"
+                                        step="any"
                                     />
                                 </div>
                                 <div class="form-group">
